--- a/Tensorflow-keras/tf_keras_classification_model-normalize.ipynb
+++ b/Tensorflow-keras/tf_keras_classification_model-normalize.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,28 +47,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading Cal. housing from https://ndownloader.figshare.com/files/5976036 to C:\\Users\\admin\\scikit_learn_data\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5000, 28, 28) (5000,)\n",
-      "(55000, 28, 28) (55000,)\n",
-      "(10000, 28, 28) (10000,)\n"
+      ".. _california_housing_dataset:\n",
+      "\n",
+      "California Housing dataset\n",
+      "--------------------------\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      "    :Number of Instances: 20640\n",
+      "\n",
+      "    :Number of Attributes: 8 numeric, predictive attributes and the target\n",
+      "\n",
+      "    :Attribute Information:\n",
+      "        - MedInc        median income in block\n",
+      "        - HouseAge      median house age in block\n",
+      "        - AveRooms      average number of rooms\n",
+      "        - AveBedrms     average number of bedrooms\n",
+      "        - Population    block population\n",
+      "        - AveOccup      average house occupancy\n",
+      "        - Latitude      house block latitude\n",
+      "        - Longitude     house block longitude\n",
+      "\n",
+      "    :Missing Attribute Values: None\n",
+      "\n",
+      "This dataset was obtained from the StatLib repository.\n",
+      "http://lib.stat.cmu.edu/datasets/\n",
+      "\n",
+      "The target variable is the median house value for California districts.\n",
+      "\n",
+      "This dataset was derived from the 1990 U.S. census, using one row per census\n",
+      "block group. A block group is the smallest geographical unit for which the U.S.\n",
+      "Census Bureau publishes sample data (a block group typically has a population\n",
+      "of 600 to 3,000 people).\n",
+      "\n",
+      "It can be downloaded/loaded using the\n",
+      ":func:`sklearn.datasets.fetch_california_housing` function.\n",
+      "\n",
+      ".. topic:: References\n",
+      "\n",
+      "    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\n",
+      "      Statistics and Probability Letters, 33 (1997) 291-297\n",
+      "\n",
+      "[[   8.3252       41.            6.98412698 ...    2.55555556\n",
+      "    37.88       -122.23      ]\n",
+      " [   8.3014       21.            6.23813708 ...    2.10984183\n",
+      "    37.86       -122.22      ]\n",
+      " [   7.2574       52.            8.28813559 ...    2.80225989\n",
+      "    37.85       -122.24      ]\n",
+      " ...\n",
+      " [   1.7          17.            5.20554273 ...    2.3256351\n",
+      "    39.43       -121.22      ]\n",
+      " [   1.8672       18.            5.32951289 ...    2.12320917\n",
+      "    39.43       -121.32      ]\n",
+      " [   2.3886       16.            5.25471698 ...    2.61698113\n",
+      "    39.37       -121.24      ]]\n",
+      "[4.526 3.585 3.521 ... 0.923 0.847 0.894]\n"
      ]
     }
    ],
    "source": [
-    "# 导入数据\n",
-    "fashion_mnist = keras.datasets.fashion_mnist\n",
-    "(x_train_all, y_train_all),(x_test, y_test) = fashion_mnist.load_data()\n",
-    "x_vaild, x_train = x_train_all[:5000], x_train_all[5000:]\n",
-    "y_vaild, y_train = y_train_all[:5000], y_train_all[5000:]\n",
+    "# 导入数据 加州房产数据\n",
+    "from sklearn.datasets import fetch_california_housing\n",
     "\n",
-    "print(x_vaild.shape, y_vaild.shape)\n",
+    "housing = fetch_california_housing()\n",
+    "print(housing.DESCR)\n",
+    "print(housing.data)\n",
+    "print(housing.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow_core.keras.datasets.boston_housing' has no attribute 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-206bc5914d96>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhousing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow_core.keras.datasets.boston_housing' has no attribute 'data'"
+     ]
+    }
+   ],
+   "source": [
+    "housing.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selectiondel import train_test_split\n",
+    "\n",
+    "x_train_all, x_test, y_train_all, y_test = train_test_split( housing.data, housing.target, random_state = 7)\n",
+    "x_train, x_valid, y_train, y_valid = train_test_split(x_train_all, y_train_all, random_state=11)\n",
+    "\n",
     "print(x_train.shape, y_train.shape)\n",
+    "print(x_valid.shape, y_valid.shape)\n",
     "print(x_test.shape, y_test.shape)"
    ]
   },
